apps/kalandozas/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalandozas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kalandozas
  template:
    metadata:
      labels:
        app: kalandozas
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kalandozas
          image: registry.kvlk.hu/kalandozas:418-429efd3 # {"$imagepolicy": "flux-system:kalandozas-policy"}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
