apps/kalandozas/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kalandozas-service
spec:
  type: ClusterIP
  selector:
    app: kalandozas
  ports:
    - name: kalandozas
      port: 80
      targetPort: http
